error in translation key

--- a/src/main/webapp/app/complaints/complaints.component.html
+++ b/src/main/webapp/app/complaints/complaints.component.html
@@ -48,7 +48,7 @@
                             ? ('artemisApp.moreFeedback.alreadySubmittedSubmissionAuthor' | translate)
                             : ('artemisApp.moreFeedback.alreadySubmittedNotSubmissionAuthor' | translate)
                         : isCurrentUserSubmissionAuthor
-                        ? ('artemisApp.moreFeedback.alreadySubmittedSubmissionAuthor' | translate)
+                        ? ('artemisApp.complaint.alreadySubmittedSubmissionAuthor' | translate)
                         : ('artemisApp.complaint.alreadySubmittedNotSubmissionAuthor' | translate)
                 }}
                 <span [ngbTooltip]="submittedDate | artemisDate">{{ submittedDate | amTimeAgo }}</span>
