Bugfix: team exer
Debugging

--- a/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
@@ -7,6 +7,7 @@
     [nextSubmissionBusy]="nextSubmissionBusy"
     [isTeamMode]="exercise?.teamMode"
     [teamId]="team?.id"
+    [team]="team"
     [isAssessor]="isAssessor"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
