Remove exercises from exerciseGroup.exercises on deletion

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -143,7 +143,7 @@
                                 [exercise]="exercise"
                                 [exerciseGroupId]="exerciseGroup.id"
                                 [latestIndividualEndDate]="latestIndividualEndDate"
-                                (onDeleteExercise)="loadExerciseGroups()"
+                                (onDeleteExercise)="removeExercise(exercise.id, exerciseGroup.id)"
                             ></jhi-exam-exercise-row-buttons>
                         </td>
                     </tr>
