--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -85,17 +85,35 @@
                                 <span class="d-none d-md-inline">{{ 'entity.action.edit' | translate }}</span>
                             </button>
                             <button
-                                *ngIf="course?.isAtLeastInstructor"
+                                *ngIf="course?.isAtLeastInstructor && programmingExercisePresentDictionary[exerciseGroup.id]; else containsNoProgrammingExercise"
                                 jhiDeleteButton
                                 [entityTitle]="exerciseGroup.title"
                                 deleteQuestion="artemisApp.examManagement.exerciseGroup.delete.question"
                                 deleteConfirmationText="artemisApp.examManagement.exerciseGroup.delete.typeNameToConfirm"
-                                (delete)="deleteExerciseGroup(exerciseGroup.id)"
+                                [additionalChecks]="{
+                                    deleteStudentReposBuildPlans: 'artemisApp.programmingExercise.delete.studentReposBuildPlans',
+                                    deleteBaseReposBuildPlans: 'artemisApp.programmingExercise.delete.baseReposBuildPlans'
+                                }"
+                                (delete)="deleteExerciseGroup(exerciseGroup.id, $event)"
                                 [dialogError]="dialogError$"
                                 class="mb-0"
                             >
                                 <fa-icon [icon]="'times'"></fa-icon>
                             </button>
+                            <ng-template #containsNoProgrammingExercise>
+                                <button
+                                    *ngIf="course?.isAtLeastInstructor"
+                                    jhiDeleteButton
+                                    [entityTitle]="exerciseGroup.title"
+                                    deleteQuestion="artemisApp.examManagement.exerciseGroup.delete.question"
+                                    deleteConfirmationText="artemisApp.examManagement.exerciseGroup.delete.typeNameToConfirm"
+                                    (delete)="deleteExerciseGroup(exerciseGroup.id, $event)"
+                                    [dialogError]="dialogError$"
+                                    class="mb-0"
+                                >
+                                    <fa-icon [icon]="'times'"></fa-icon>
+                                </button>
+                            </ng-template>
                         </div>
                     </div>
                 </div>
