fix client bug When programming exercises were removed from the exercise group the delete exercise group modal still showed the checkboxes for deleting student repositories and buildplans

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -162,6 +162,7 @@
                                 [exerciseGroupId]="exerciseGroup.id"
                                 [latestIndividualEndDate]="latestIndividualEndDate"
                                 (onDeleteExercise)="removeExercise(exercise.id, exerciseGroup.id)"
+                                (onDeleteProgrammingExercise)="removeExercise(exercise.id, exerciseGroup.id, true)"
                             ></jhi-exam-exercise-row-buttons>
                         </td>
                     </tr>
