--- a/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
+++ b/src/main/webapp/app/exam/exam-scores/exam-scores.component.html
@@ -11,7 +11,7 @@
             {{ examScoreDTO.title }}
         </h3>
         <h4 *ngIf="examScoreDTO.maxPoints" jhiTranslate="artemisApp.examScores.pointsAchievable" [translateValues]="{ maxPoints: examScoreDTO.maxPoints }">
-            {{ getLocaleConversionService().toLocaleString(examScoreDTO.maxPoints) }} Points achievable
+            {{ toLocaleString(examScoreDTO.maxPoints) }} Points achievable
         </h4>
         <h4 *ngIf="exerciseGroups && studentResults">
             <small jhiTranslate="artemisApp.examScores.examResultSummary" [translateValues]="{ exercisesLength: exerciseGroups.length, studentsLength: studentResults.length }">
